--- a/redux-tuto-2/src/index.css
+++ b/redux-tuto-2/src/index.css
@@ -42,7 +42,7 @@ input {
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 10px;
-  margin-bottom: 10px;
+  margin: 10px 0;
   
 }
 
@@ -50,7 +50,7 @@ textarea {
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 10px;
-  margin-bottom: 10px;
+  margin: 10px 0;
   height: 200px;
 }
 
@@ -59,4 +59,21 @@ button {
   border-radius: 4px;
   padding: 10px;
   margin-bottom: 10px;
+}
+
+.author {
+  font-size: 12px;
+  
+}
+.date {
+  font-size: 12px;
+  
+}
+
+.reactionButton {
+  border: none;
+  border-radius: 4px;
+  
+  margin: 0 0.25em 0 0;
+  font-size: 1rem;
 }
