--- a/redux-Async logic & Thunks/src/index.css
+++ b/redux-Async logic & Thunks/src/index.css
@@ -73,7 +73,11 @@ button {
 .reactionButton {
   border: none;
   border-radius: 4px;
-  
   margin: 0 0.25em 0 0;
   font-size: 1rem;
+}
+
+.emojiName {
+  font-size: 1rem;
+  margin-left: 10px;
 }
